unified_tests/literals/string_interpolation_with_non_string_type/expect/build.text.stderr
lib.copp:3:14: error: string interpolation expression must be type string, got int64
      return "{n}"
               ^
